--- a/WolvenKitUI/Views/DocumentView.xaml
+++ b/WolvenKitUI/Views/DocumentView.xaml
@@ -1,9 +1,9 @@
 ﻿<UserControl
-	x:Class="MLibTest.Demos.ViewModels.Views.DocumentView"
+	x:Class="WolvenKitUI.Views.DocumentView"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="clr-namespace:MLibTest.Demos.ViewModels.Views"
+	xmlns:local="clr-namespace:WolvenKitUI.Views"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	d:DesignHeight="450"
 	d:DesignWidth="800"
