--- a/WolvenKitUI/Views/MainView.xaml
+++ b/WolvenKitUI/Views/MainView.xaml
@@ -3,13 +3,106 @@
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com"
                    xmlns:orccontrols="http://schemas.wildgums.com/orc/controls"
-                   xmlns:MWindow="clr-namespace:MWindowLib;assembly=MWindowLib"
                    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                    xmlns:demos="clr-namespace:MLibTest.Demos"
                    >
 
-    <Grid>
-        
+    <Grid
+        xmlns:bindLocal="clr-namespace:MLibTest.Demos"
+        xmlns:conv="clr-namespace:MLibTest.Demos.Demos.Converters">
+        <Grid.Resources>
+            <conv:ActiveDocumentConverter x:Key="ActiveDocumentConverter" />
+            <BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
+        </Grid.Resources>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <DockingManager Grid.Row="0"
+                        xmlns:views="clr-namespace:WolvenKitUI.Views"
+                        x:Name="dockManager"
+                        ActiveContent="{Binding ActiveDocument, Mode=TwoWay, Converter={StaticResource ActiveDocumentConverter}}"
+                        AnchorablesSource="{Binding Tools}"
+                        DataContext="{Binding}"
+                        DocumentsSource="{Binding Files}"
+                        IsVirtualizingAnchorable="True"
+                        IsVirtualizingDocument="True"
+                        Visibility="Hidden"
+                        
+                        >
+            <DockingManager.Theme>
+                <Vs2013DarkTheme/>
+            </DockingManager.Theme>
+            <DockingManager.LayoutItemTemplateSelector>
+                
+                <demos:PanesTemplateSelector>
+                    <demos:PanesTemplateSelector.FileViewTemplate>
+                        <DataTemplate>
+                            <views:DocumentView />
+                        </DataTemplate>
+                    </demos:PanesTemplateSelector.FileViewTemplate>
+                    <demos:PanesTemplateSelector.FileStatsViewTemplate>
+                        <DataTemplate>
+                            <Border Padding="6">
+                                <StackPanel Orientation="Vertical">
+                                    <TextBlock Text="{Binding FileSize}" />
+                                    <TextBlock Text="{Binding LastModified}" />
+                                    <TextBox Text="test" />
+                                </StackPanel>
+                            </Border>
+                        </DataTemplate>
+                    </demos:PanesTemplateSelector.FileStatsViewTemplate>
+                    <demos:PanesTemplateSelector.Tooln_ViewTemplate>
+                        <DataTemplate>
+                            <Border Padding="6">
+                                <StackPanel Orientation="Vertical">
+                                    <TextBlock Text="I am a ToolWindow test implementation" />
+                                </StackPanel>
+                            </Border>
+                        </DataTemplate>
+                    </demos:PanesTemplateSelector.Tooln_ViewTemplate>
+                </demos:PanesTemplateSelector>
+            </DockingManager.LayoutItemTemplateSelector>
+
+            <DockingManager.LayoutItemContainerStyleSelector>
+                <demos:PanesStyleSelector>
+                    <demos:PanesStyleSelector.ToolStyle>
+                        <!--  Define Style of a Tool Window View  -->
+                        <Style TargetType="{x:Type LayoutAnchorableItem}">
+                            <Setter Property="Title" Value="{Binding Model.Title, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
+                            <Setter Property="IconSource" Value="{Binding Model.IconSource, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
+                            <Setter Property="Visibility" Value="{Binding Model.IsVisible, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter={x:Static Visibility.Hidden}}" />
+                            <Setter Property="ContentId" Value="{Binding Model.ContentId, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
+                            <Setter Property="IsSelected" Value="{Binding Model.IsSelected, Mode=TwoWay}" />
+                            <Setter Property="IsActive" Value="{Binding Model.IsActive, Mode=TwoWay}" />
+                            <Setter Property="CanHide" Value="True" />
+                        </Style>
+                    </demos:PanesStyleSelector.ToolStyle>
+                    <demos:PanesStyleSelector.FileStyle>
+                        <!--  Define Style of a Document View  -->
+                        <Style TargetType="{x:Type LayoutDocumentItem}">
+                            <Setter Property="Title" Value="{Binding Model.Title, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
+                            <Setter Property="ToolTip" Value="{Binding Model.FilePath, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
+                            <Setter Property="CloseCommand" Value="{Binding Model.CloseCommand}" />
+                            <Setter Property="IconSource" Value="{Binding Model.IconSource, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
+                            <Setter Property="ContentId" Value="{Binding Model.ContentId, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
+                        </Style>
+                    </demos:PanesStyleSelector.FileStyle>
+                </demos:PanesStyleSelector>
+            </DockingManager.LayoutItemContainerStyleSelector>
+            <DockingManager.LayoutUpdateStrategy>
+                <demos:LayoutInitializer />
+            </DockingManager.LayoutUpdateStrategy>
+
+            <LayoutRoot>
+                <LayoutPanel>
+                    <LayoutDocumentPane />
+                    <!--  Use DockMinWidth="250" to limit the size of a LayoutAnchorable  -->
+                    <LayoutAnchorablePane Name="ToolsPane" DockMinWidth="375" />
+                </LayoutPanel>
+            </LayoutRoot>
+        </DockingManager>
 
 
 
