--- a/WolvenKitUI/Views/LogView.xaml
+++ b/WolvenKitUI/Views/LogView.xaml
@@ -7,6 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TextBox x:Name="LogBox" Text="{Binding Log}"/>
+        <RichTextBox x:Name="LogRichTextBox" IsReadOnly="True"/>
     </Grid>
 </UserControl>
