--- a/WolvenKitUI/Views/MainView.xaml
+++ b/WolvenKitUI/Views/MainView.xaml
@@ -4,14 +4,13 @@
                    xmlns:catel="http://schemas.catelproject.com"
                    xmlns:orccontrols="http://schemas.wildgums.com/orc/controls"
                    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                   xmlns:demos="clr-namespace:MLibTest.Demos"
+                   xmlns:ad="clr-namespace:WolvenKitUI.Layout"
                    >
 
     <Grid
-        xmlns:bindLocal="clr-namespace:MLibTest.Demos"
-        xmlns:conv="clr-namespace:MLibTest.Demos.Demos.Converters">
+        xmlns:conv="clr-namespace:WolvenKitUI.Layout.Converters">
         <Grid.Resources>
-            <conv:ActiveDocumentConverter x:Key="ActiveDocumentConverter" />
+            <conv:ActiveDocumentConverter x:Key="ActiveDocumentConverter"/>
             <BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
         </Grid.Resources>
 
@@ -31,43 +30,36 @@
                         Visibility="Hidden"
                         
                         >
+            <!-- Global Theme -->
             <DockingManager.Theme>
                 <Vs2013DarkTheme/>
             </DockingManager.Theme>
+
+            <!-- Register Views here -->
             <DockingManager.LayoutItemTemplateSelector>
                 
-                <demos:PanesTemplateSelector>
-                    <demos:PanesTemplateSelector.FileViewTemplate>
+                <ad:PanesTemplateSelector>
+
+                    <!-- DocumentView -->
+                    <ad:PanesTemplateSelector.FileViewTemplate>
                         <DataTemplate>
                             <views:DocumentView />
                         </DataTemplate>
-                    </demos:PanesTemplateSelector.FileViewTemplate>
-                    <demos:PanesTemplateSelector.FileStatsViewTemplate>
+                    </ad:PanesTemplateSelector.FileViewTemplate>
+                    <!-- LogView -->
+                    <ad:PanesTemplateSelector.LogViewTemplate>
                         <DataTemplate>
-                            <Border Padding="6">
-                                <StackPanel Orientation="Vertical">
-                                    <TextBlock Text="{Binding FileSize}" />
-                                    <TextBlock Text="{Binding LastModified}" />
-                                    <TextBox Text="test" />
-                                </StackPanel>
-                            </Border>
+                            <views:LogView />
                         </DataTemplate>
-                    </demos:PanesTemplateSelector.FileStatsViewTemplate>
-                    <demos:PanesTemplateSelector.Tooln_ViewTemplate>
-                        <DataTemplate>
-                            <Border Padding="6">
-                                <StackPanel Orientation="Vertical">
-                                    <TextBlock Text="I am a ToolWindow test implementation" />
-                                </StackPanel>
-                            </Border>
-                        </DataTemplate>
-                    </demos:PanesTemplateSelector.Tooln_ViewTemplate>
-                </demos:PanesTemplateSelector>
+                    </ad:PanesTemplateSelector.LogViewTemplate>
+                    
+                </ad:PanesTemplateSelector>
             </DockingManager.LayoutItemTemplateSelector>
 
+            <!-- Register Styles here -->
             <DockingManager.LayoutItemContainerStyleSelector>
-                <demos:PanesStyleSelector>
-                    <demos:PanesStyleSelector.ToolStyle>
+                <ad:PanesStyleSelector>
+                    <ad:PanesStyleSelector.ToolStyle>
                         <!--  Define Style of a Tool Window View  -->
                         <Style TargetType="{x:Type LayoutAnchorableItem}">
                             <Setter Property="Title" Value="{Binding Model.Title, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
@@ -78,8 +70,8 @@
                             <Setter Property="IsActive" Value="{Binding Model.IsActive, Mode=TwoWay}" />
                             <Setter Property="CanHide" Value="True" />
                         </Style>
-                    </demos:PanesStyleSelector.ToolStyle>
-                    <demos:PanesStyleSelector.FileStyle>
+                    </ad:PanesStyleSelector.ToolStyle>
+                    <ad:PanesStyleSelector.FileStyle>
                         <!--  Define Style of a Document View  -->
                         <Style TargetType="{x:Type LayoutDocumentItem}">
                             <Setter Property="Title" Value="{Binding Model.Title, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
@@ -88,13 +80,14 @@
                             <Setter Property="IconSource" Value="{Binding Model.IconSource, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
                             <Setter Property="ContentId" Value="{Binding Model.ContentId, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
                         </Style>
-                    </demos:PanesStyleSelector.FileStyle>
-                </demos:PanesStyleSelector>
+                    </ad:PanesStyleSelector.FileStyle>
+                </ad:PanesStyleSelector>
             </DockingManager.LayoutItemContainerStyleSelector>
             <DockingManager.LayoutUpdateStrategy>
-                <demos:LayoutInitializer />
+                <ad:LayoutInitializer />
             </DockingManager.LayoutUpdateStrategy>
 
+            <!-- Virtualized Layout -->
             <LayoutRoot>
                 <LayoutPanel>
                     <LayoutDocumentPane />
@@ -103,7 +96,6 @@
                 </LayoutPanel>
             </LayoutRoot>
         </DockingManager>
-
 
 
     </Grid>
