--- a/WolvenKitUI/Views/ProjectExplorerView.xaml
+++ b/WolvenKitUI/Views/ProjectExplorerView.xaml
@@ -15,18 +15,21 @@
             <conv:ExtensionToImageConverter x:Key="ExtensionToImageConverter"/>
         </Grid.Resources>
 
-        <TreeView Name="treeView" ItemsSource="{Binding Treenodes}">
+        <TreeView Name="TreeView" ItemsSource="{Binding Treenodes}">
             <TreeView.ItemContainerStyle>
                 <Style TargetType="{x:Type TreeViewItem}">
                     <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
                     <Setter Property="KeyboardNavigation.AcceptsReturn" Value="True" />
                 </Style>
             </TreeView.ItemContainerStyle>
+
             <TreeView.Resources>
                 <HierarchicalDataTemplate DataType="{x:Type model:DirectoryInfoModel}" ItemsSource="{Binding Children}">
                     <StackPanel Orientation="Horizontal">
                         <!--<Image Source="{Binding Path=ImageSource, UpdateSourceTrigger=PropertyChanged}" Margin="0,1,8,1"></Image>-->
-                        <Image Source="{Binding Extension, Converter={StaticResource ExtensionToImageConverter}}" Margin="0,1,8,1"/>
+                        <Image Source="{Binding Extension, Converter={StaticResource ExtensionToImageConverter}}" 
+                               Margin="0,1,8,1"
+                               Height="16"/>
                         <TextBlock Text="{Binding Path=Name}" />
                     </StackPanel>
                     
@@ -34,7 +37,9 @@
                 <DataTemplate DataType="{x:Type model:FileInfoModel}" >
                     <StackPanel Orientation="Horizontal">
                         <!--<Image Source="{Binding Path=ImageSource, UpdateSourceTrigger=PropertyChanged}" Margin="0,1,8,1"></Image>-->
-                        <Image Source="{Binding Extension, Converter={StaticResource ExtensionToImageConverter}}" Margin="0,1,8,1"/>
+                        <Image Source="{Binding Extension, Converter={StaticResource ExtensionToImageConverter}}" 
+                               Margin="0,1,8,1"
+                               Height="16"/>
                         <TextBlock Text="{Binding Path=Name}" />
                     </StackPanel>
                 </DataTemplate>
