--- a/WolvenKitUI/Views/RibbonView.xaml
+++ b/WolvenKitUI/Views/RibbonView.xaml
@@ -7,7 +7,9 @@
                    xmlns:local="clr-namespace:WolvenKitUI"
                    xmlns:orchestra="http://schemas.wildgums.com/orchestra"
                    xmlns:orccontrols="http://schemas.wildgums.com/orc/controls"
-                   xmlns:svgc="http://sharpvectors.codeplex.com/svgc/">
+                   xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
+                   xmlns:views="clr-namespace:WolvenKitUI.Views"
+                   xmlns:orctheming="http://schemas.wildgums.com/orc/theming">
 
     <!-- Resources -->
     <UserControl.Resources>
@@ -52,25 +54,73 @@
         <fluent:Ribbon Grid.Row="0" x:Name="ribbon">
             <!-- Backstage -->
             <fluent:Ribbon.Menu>
-                <fluent:Backstage>
-                    <fluent:BackstageTabControl x:Name="backstageTabControl">
-                        <fluent:Button Header="New" 
-                                       Icon="{DynamicResource IconNewSolutionFolder}" 
-                                       Command="{catel:CommandManagerBinding Application.NewProject}" />
-                        <fluent:Button Header="Open" 
-                                       Icon="{DynamicResource IconOpenFolder}" 
-                                       Command="{catel:CommandManagerBinding Application.OpenProject}" />
+                <fluent:Backstage x:Name="Backstage" >
 
-                        <fluent:Button Header="Close" 
-                                       Icon="{DynamicResource IconClose}" 
-                                       Command="{catel:CommandManagerBinding Application.Exit}" />
-                        
+                    <fluent:BackstageTabControl x:Name="backstageTabControl"
+                                                
+                    >
+
+
+                        <fluent:BackstageTabControl.Resources>
+                            <Style x:Key="MyFLuentButtonStyle" TargetType="{x:Type fluent:BackstageTabItem}" 
+                                   BasedOn="{StaticResource {x:Type fluent:BackstageTabItem}}">
+                                <Setter Property="FontSize" Value="18" />
+                            </Style>
+
+                        </fluent:BackstageTabControl.Resources>
+
+
+
+
+                        <fluent:BackstageTabItem 
+                            Header="Home"
+                            Height="120"
+                            Icon="{orctheming:FontImage {x:Static local:FontAwesome.Home}, FontFamily=FontAwesome}"
+                            
+                            Style="{StaticResource MyFLuentButtonStyle}"
+                        >
+                            <views:OpenFileView />
+                        </fluent:BackstageTabItem>
+
+                       
+
+                        <fluent:Button  Header="Open"
+                                        Height="120"
+                                        Icon="{orctheming:FontImage {x:Static local:FontAwesome.FolderOpenO}, FontFamily=FontAwesome}"
+                                        Command="{catel:CommandManagerBinding Application.OpenProject}" 
+                                        FontSize="18"
+                        >
+
+                        </fluent:Button>
+
+                        <fluent:Button Header="New"
+                                       Height="120"
+                                       LargeIcon="{orctheming:FontImage {x:Static local:FontAwesome.File}, FontFamily=FontAwesome}"
+                                       FontSize="18"
+                                       Command="{catel:CommandManagerBinding Application.NewProject}" >
+
+
+
+
+                        </fluent:Button>
+
+                        <fluent:SeparatorTabItem Height="Auto" Margin="20,200,20,0"/>
+
                         <fluent:Button Header="Options" 
-                                       Icon="{DynamicResource IconPreferences}"
+                                       
+                                       Icon="{orctheming:FontImage {x:Static local:FontAwesome.Cog}, FontFamily=FontAwesome}"
                                        Command="{catel:CommandManagerBinding Application.Options}" />
+
                         <fluent:Button Header="About" 
-                                       Icon="{DynamicResource IconPreferences}"
-                                       Command="{catel:CommandManagerBinding Application.About}" />
+                                       Icon="{orctheming:FontImage {x:Static local:FontAwesome.Info}, FontFamily=FontAwesome}"
+                                       Command="{catel:CommandManagerBinding Application.About}" 
+                                       VerticalAlignment="Bottom"
+                                       VerticalContentAlignment="Bottom"
+                                       
+                                       />
+
+
+
                     </fluent:BackstageTabControl>
                 </fluent:Backstage>
             </fluent:Ribbon.Menu>
@@ -94,15 +144,15 @@
                     <fluent:Button Header="Open File"
                        Icon="{DynamicResource IconOpenFile}"
                        LargeIcon="{DynamicResource IconOpenFile}" 
-                       Command="{Binding OpenFileCommand}"/>
+                       Command="{catel:CommandManagerBinding OpenFile}"/>
                     <fluent:Button Header="New File" 
                        Icon="{DynamicResource IconNewFile}"
                        LargeIcon="{DynamicResource IconNewFile}" 
-                       Command="{Binding NewFileCommand}"/>
+                       Command="{catel:CommandManagerBinding NewFile}"/>
                     <fluent:Button Header="Game Assets" 
                        Icon="{DynamicResource IconSearchFolder}"
                        LargeIcon="{DynamicResource IconSearchFolder}" 
-                       Command="{Binding AssetBrowserCommand}"/>
+                       Command="{catel:CommandManagerBinding ShowAssetBrowser}"/>
                     
                     
                 </fluent:RibbonGroupBox>
@@ -112,21 +162,21 @@
                     <fluent:Button Header="Pack Mod"
                        Icon="{DynamicResource IconRun}"
                        LargeIcon="{DynamicResource IconRun}" 
-                       Command="{Binding Command1}"/>
+                       Command="{catel:CommandManagerBinding PackMod}"/>
                     <fluent:Button Header="Package Installer" 
                        Icon="{DynamicResource IconRunTest}"
                        LargeIcon="{DynamicResource IconRunTest}" 
-                       Command="{Binding Command1}"
+                       Command="{catel:CommandManagerBinding ShowPackageInstaller}"
                        Size="Middle"/>
                     <fluent:Button Header="Backup Mod" 
                        Icon="{DynamicResource IconGit}"
                        LargeIcon="{DynamicResource IconGit}"
-                       Command="{Binding Command1}"
+                       Command="{catel:CommandManagerBinding BackupMod}"
                        Size="Middle"/>
                     <fluent:Button Header="Mod Settings" 
                        Icon="{DynamicResource IconSettings}"
                        LargeIcon="{DynamicResource IconSettings}" 
-                       Command="{Binding Command1}"
+                       Command="{catel:CommandManagerBinding ShowModSettings}"
                        Size="Middle"/>
                 </fluent:RibbonGroupBox>
             </fluent:RibbonTabItem>
@@ -153,7 +203,6 @@
                                    Size="Small"/>
                     
                 </fluent:RibbonGroupBox>
-
 
                 <!-- Project -->
                 <fluent:RibbonGroupBox Header="Tools">
