--- a/WolvenKitUI/Views/ProjectExplorerView.xaml
+++ b/WolvenKitUI/Views/ProjectExplorerView.xaml
@@ -7,6 +7,9 @@
              xmlns:catel="http://schemas.catelproject.com"
              xmlns:viewModels="clr-namespace:WolvenKit.App.ViewModels;assembly=WolvenKit.App"
              xmlns:model="clr-namespace:WolvenKit.App.Model;assembly=WolvenKit.App"
+             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+             xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
+             xmlns:behavior="clr-namespace:WolvenKitUI.Behavior"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid
@@ -16,15 +19,31 @@
         </Grid.Resources>
 
         <TreeView Name="TreeView" 
-                  ItemsSource="{Binding Treenodes}"
-                  
-                  >
+                             ItemsSource="{Binding Treenodes}"
+                             
+                             >
+            <i:Interaction.Behaviors>
+                <behavior:TreeViewBehavior/>
+            </i:Interaction.Behaviors>
+
+            <TreeView.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="Expand all" Command="{Binding ExpandAllCommand}"/>
+                    <MenuItem Header="Collapse all" Command="{Binding CollapseAllCommand}"/>
+                    <Separator/>
+                    <MenuItem Header="Expand children" Command="{Binding ExpandCommand}"/>
+                    <MenuItem Header="Collapse children" Command="{Binding CollapseCommand}"/>
+                    <Separator/>
+                    <MenuItem Header="Rename" Command="{Binding RenameCommand}"/>
+                    <MenuItem Header="Delete" Command="{Binding DeleteCommand}"/>
+                </ContextMenu>
+            </TreeView.ContextMenu>
+
             <TreeView.ItemContainerStyle>
                 <Style TargetType="{x:Type TreeViewItem}">
-                    <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                    <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                    <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
+                    <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}"/>
                     <Setter Property="KeyboardNavigation.AcceptsReturn" Value="True" />
-                    
                 </Style>
             </TreeView.ItemContainerStyle>
 
@@ -36,8 +55,14 @@
                                Margin="0,1,8,1"
                                Height="16"/>
                         <TextBlock Text="{Binding Path=Name}" />
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="PreviewMouseRightButtonDown">
+                                <ei:ChangePropertyAction PropertyName="IsSelected" Value="true" 
+                                                         TargetObject="{Binding}"/>
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
                     </StackPanel>
-
+                    
                 </HierarchicalDataTemplate>
             </TreeView.Resources>
         </TreeView>
